刑事訴訟法 2002.1.18

--- a/司法-刑事/刑事訴訟法.md
+++ b/司法-刑事/刑事訴訟法.md
@@ -136,9 +136,9 @@
 
 * 60 公示送達應由書記官分別經法院或檢察長、首席檢察官或檢察官之許可，除將應送達之文書或其節本，張貼於法院牌示處外，並應以其繕本登載報紙，或以其他適當方法通知或公告之。前項送達，自最後登載報紙或通知公告之日起，經三十日發生效力。
 
-* 61 送達文書由司法警察或郵政機關行之。前項文書為判決、裁定、起訴書或不起訴處分書者，送達人應作收受證書，記載送達證書所列事項，並簽名交收領人。
+* 61 送達文書由司法警察或郵政機關行之。前項文書為判決、裁定、不起訴或緩起訴處分書者，送達人應作收受證書、記載送達證書所列事項，並簽名交受領人。
 
-> 釋：為使刑事訴訟程序進行較為順暢，並避免刑事訴訟文書送達遲延，爰於第一項中「司法警察」下增訂「或郵政機關」五字，俾法院或檢察機關亦得以選擇較為便利之郵務送達方式。則警察機關業務亦可減輕，使其得以專心偵辦刑案，以維護社會治安。
+> 釋：第二項配合有關緩起訴規定之增訂而修正，俾使緩起訴處分書之送達方式可資依循。
 
 * 62 送達文書，除本章有特別規定外，準用民事訴訟法之規定。
 
@@ -510,9 +510,13 @@
 
 * 176 第七十二條及第七十三條之規定，於證人之傳喚準用之。
 
-* 177 證人不到場或有其他必要情形，得就其所在或於其所在地法院訊問之。
+* 177 證人不能到場或有其他必要情形，得於聽取當事人及辯護人之意見後，就其所在或於其所在地法院訊問之。前項情形，證人所在與法院間有聲音及影像相互傳送之科技設備而得直接訊問，經法院認為適當者，得以該設備訊問之。當事人、辯護人及代理人得於前二項訊問證人時在場並得詰問之；其訊問之日時及處所，應預行通知之。第二項之情形，於偵查中準用之。
 
-* 178 證人經合法傳喚，無正當理由而不到場者，得科以五十元以下之罰鍰，並得拘提之；再傳不到者亦同。前項科罰鍰之處分，由法院裁定之。檢察官為傳喚者，應請所屬法院裁定之。對於前項裁定，得提起抗告。拘提證人，準用第七十七條至第八十三條及第八十九條至第九十一條之規定。
+> 釋：一、隨著現代科技之進步與發展，資訊之傳遞更為快速而準確，訊問證人之方式，除傳統之當庭訊問或就地訊問外，若有科技設備而得直接訊問者與證人親自到庭以言詞陳述，無甚差別，且避在押人犯之提解戒護之安全問題，增訂第二項。二、為確實保障當事人之反對詰問權及律師依賴權，當事人、代理人及辯護人自得於依前開方式訊問證人時在場，並行使反對詰問權，而且其訊問之日、時及處所，應預行通知之，俾其知而有行使權利之機會並預為準備。爰增訂本條第三項。三、使用科技設備訊問證人，在偵查中亦有必要，爰增訂第四項。
+
+* 178 證人經合法傳喚，無正當理由而不到場者，得科以新臺幣三萬元以下之罰鍰，並得拘提之；再傳不到者，亦同。前項科罰鍰之處分，由法院裁定之。檢察官為傳喚者，應聲請該管法院裁定之。對於前項裁定，得提起抗告。拘提證人，準用第七十七條至第八十三條及第八十九條至第九十一條之規定。
+
+> 釋：一、原條文對證人無故不到場之處罰過輕，不足以約束證人到庭。爰參酌民事訴訟法第三百零三條，修正提高有關證人不到場之罰鍰數額，並改以新台幣作為罰鍰單位。二、審檢分隸後，檢察官不配置於法院，故第二項後段文字修正為檢察官應聲請「該管法院」裁定，以符實際。
 
 * 179 以公務員或曾為公務員之人為證人，而就其職務上應守秘密之事項訊問者，應得該管監督機關或公務員之允許。前項允許，除有妨害國家之利益者外，不得拒絕。
 
@@ -592,7 +596,9 @@
 
 * 217 因檢驗或解剖屍體，得將該屍體或其一部暫行留存，並得開棺及發掘墳墓。檢驗或解剖屍體及開棺發掘墳墓，應通知死者之配偶或其他同居或較近之親屬，許其在場。
 
-* 218 遇有非病死或可疑為非病死者，該管檢察官應速相驗；如發現有犯罪嫌疑，應繼續為必要之勘驗。
+* 218 遇有非病死或可疑為非病死者，該管檢察官應速相驗。前項相驗，檢察官得命檢察事務官會同法醫師、醫師或檢驗員行之。但檢察官認顯無犯罪嫌疑者，得調度司法警察官會同法醫師、醫師或檢驗員行之。依前項規定相驗完畢後，應即將相關之卷證陳報檢察官。檢察官如發現有犯罪嫌疑時，應繼續為必要之勘驗及調查。
+
+> 釋：一、因法院組織法已增設檢察事務官，用以協助檢察官偵查犯罪，而相既為偵查之開端，檢察官亦得指揮檢察事務官行之，爰增訂第二項前段；又檢察官對於死因明確，顯無犯罪嫌疑之案件或重大災難事故所引起之死亡案件，如均要逐案事必躬親，將使檢察官人力無法為適當之分配及運用，增訂第二項後段。二、檢察事務官或司法警察官依檢察官之命令或調度實施相驗，相驗完畢後，應立即將相關之卷證陳報檢察官審核，以收監督效能，檢察官如發現有犯罪嫌疑時，應繼續為必要之勘驗及調查，爰增訂第三項。
 
 * 219 第一百二十七條、第一百四十六條至第一百五十一條及第一百五十三條之規定，於勘驗準用之。
 
@@ -682,27 +688,71 @@
 
 * 252 案件有左列情形之一者，應為不起訴之處分：一、曾經判決確定者。二、時效已完成者。三、曾經大赦者。四、犯罪後之法律已廢止其刑罰者。五、告訴或請求乃論之罪，其告訴或請求已經撤回或已逾告訴期間者。六、被告死亡者。七、法院對於被告無審判權者。八、行為不罰者。九、法律應免除其刑者。十、犯罪嫌疑不足者。
 
-* 253 第三百七十六條所規定之案件，檢察官參酌刑法第五十七條所列事項，認為以不起訴為適當者，得為不起訴之處分。檢察官為前項不起訴處分前，並得斟酌情形，經告訴人同意，命被告為左列各款事項：一、向被害人道歉。二、立悔過書。三、向被害人支付相當數額之慰撫金。前項情形，應附記於不起訴處分書內。第二項第三款並得為民事強制執行名義。
+* 253 第三百七十六條所規定之案件，檢察官參酌刑法第五十七條所列事項，認為以不起訴為適當者，得為不起訴之處分。
 
-> 釋：一、第三百七十六條第一項所規定之案件係不得上訴於第三審法院之案件，檢察官依職權得為不起訴處分案件之範圍，與不得上訴於第三審法院之案件範圍相符。茲限制上訴第三審案件範圍已修正擴大，為加強微罪不舉之功能，則檢察官之職權不起訴範圍，自宜比照適度擴大，爰修正第一項。二、第二、三、四項規定未修正。
+> 釋：有關本條第二項至第四項之規定於第二百五十三條之一已有規定，為免適用上之疑義，並釐清「微罪不舉」及「緩起訴」之區分，爰刪除第二項至第四項。
+
+* 253.1 被告所犯為死刑、無期徒刑或最輕本刑三年以上有期徒刑以外之罪，檢察官參酌刑法第五十七條所列事項及公共利益之維護，認以緩起訴為適當者，得定一年以上三年以下之緩起訴期間為緩起訴處分，其期間自緩起訴處分確定之日起算。追訴權之時效，於緩起訴之期間內，停止進行。刑法第八十三條第三項之規定，於前項之停止原因，不適用之。第三百二十三條第一項但書之規定，於緩起訴期間，不適用之。
+
+> 釋：一、本條新增。二、為使司法資源有效運用，填補被害人之損害、有利被告或犯罪嫌疑人之再社會化及犯罪之特別預防等目的，爰參考日本起訴猶豫制度及德國附條件及履行期間之暫不提起公訴制度，於本條增訂緩起訴處分制度，其適用之範圍以被告所犯為死刑、無期徒刑或最本刑為三年以上有期待刑以外之罪者，始有適用，其猶豫期間為一年以上三年以下。
+
+* 253.2 檢察官為緩起訴處分者，得命被告於一定期間內遵守或履行左列各款事項：一、向被害人道歉。二、立悔過書。三、向被害人支付相當數額之財產或非財產上之損害賠償。四、向公庫或指定之公益團體、地方自治團體支付一定之金額。五、向指定之公益團體、地方自治團體或社區提供四十小時以上二百四十小時以下之義務勞務。六、完成戒癮治療、精神治療、心理輔導或其他適當之處遇措施。七、保護被害人安全之必要命令。八、預防再犯所為之必要命令。檢察官命被告遵守或履行前項第三款至第六款之事項，應得被告之同意；第三款、第四款並得為民事強制執行名義。第一項情形，應附記於緩起訴處分書內。第一項之期間，不得逾緩起訴期間。
+
+> 釋：一、本條新增。二、基於個別預防、鼓勵被告自新及復歸社會之目的，允宜賦予檢察官於「緩起訴」時，得命被告遵守一定之條件或事項之權力，增列第一項。三、第一項第三款至第六款之各該應遵守事項，因課以被告履行一定負擔之義務，人身自由及財產將遭拘束，且產生未經裁判即終局處理案件之實質效果，自應考慮被告之意願，增列第二項前段；又為求檢察官處分得以貫徹及有效執行，自宜使第一項第三款、第四款會被告為一定給付之處分得為民事強制執行之執行名義，以符合公平，增列第二項後段。四、為杜爭議，且明執行範圍，爰於本條第三項增定「緩起訴」附應遵守事項時，應附記於「緩起訴」處分書之內。五、檢察官為緩起訴處分時，命被告遵守一定事項，其期限若逾緩起訴期間，有違緩起訴制度之精神，爰增訂第四項。
+
+* 253.3 被告於緩起訴期間內，有左列情形之一者，檢察官得依職權或依告訴人之聲請撤銷原處分，繼續偵查或起訴：一、於期間內故意更犯有期徒刑以上刑之罪，經檢察官提起公訴者。二、緩起訴前，因故意犯他罪，而在緩起訴期間內受有期徒刑以上刑之宣告者。三、違背第二百五十三條之二第一項各款之應遵守或履行事項者。檢察官撤銷緩起訴之處分時，被告已履行之部分，不得請求返還或賠償。
+
+> 釋：一、本條新增。二、第一項明定檢察官得依職權或依告訴人之聲請，將被告「緩起訴」處分撤銷之情形。三、若被告對檢察官所命應遵守之事項已履行全部或部分後，嗣「緩起訴」之處分經依法撤銷，已履行部分，如何處理易滋疑義，增訂第二項。
 
 * 254 被告犯數罪時，其一罪已受重刑之確定判決，檢察官認為他罪雖行起訴，於應執行之刑無重大關係者，得為不起訴之處分。
 
-* 255 檢察官依前三條規定或因其他法定理由為不起訴之處分者，應制作處分書敘述不起訴之理由。不起訴處分書，應以正本送達於告訴人、告發人、被告及其辯護人。前項送達，自書記官接受處分書原本之日起，不得逾五日。
+* 255 檢察官依第二百五十二條、第二百五十三條、第二百五十三條之一、第二百五十三條之三、第二百五十四條規定為不起訴、緩起訴或撤銷緩起訴或因其他法定理由為不起訴處分者，應製作處分書敘述其處分之理由。但處分前經告訴人或告發人同意者，處分書得僅記載處分之要旨。前項處分書，應以正本送達於告訴人、告發人、被告及辯護人。緩起訴處分書，並應送達與遵守或履行行為有關之被害人、機關、團體或社區。前項送達，自書記官接受處分書原本之日起，不得逾五日。
 
-> 釋：一、第一項不修正。二、本法第二十七條修正後，被告如於偵查中選任辯護人，檢察官依規定制作之不起訴處分書，自應送達於辯護人，故修正本條第二項，揭示不起訴處分書應將正本送達於辯護人，以免實務上發生爭議。（起訴書之送達，因有刑事訴訟法第二六三條準用本條第二項第三項之規定，毋庸另行規定。）
+> 釋：一、配合第二百五十三條之一至之三之增訂，修正第一項前段。另為合理簡化檢察官製作之處分書類，增列但書規定。二、檢察官所為之處分書應同時送達與遵守或履行行為有關之被害人、機關、團體或社區，以利被告遵守及各該機關、團體或社區之執行，爰於第二項後段增訂。
 
-* 256 告訴人接受不起訴處分書後，得於七日內以書狀敘述不服之理由，經原檢察官向直接上級法院首席檢察官或檢察長聲請再議。但有第二百五十三條第二項之情形者，不得聲請再議。不起訴處分得聲請再議者，其再議期間及聲請再議之直接上級法院首席檢察官或檢察長，應記載於送達告訴人處分書正本。
+* 256 告訴人接受不起訴或緩起訴處分書後，得於七日內以書狀敘述不服之理由，經原檢察官向直接上級法院檢察署檢察長或檢察總長聲請再議。但第二百五十三條、第二百五十三條之一之處分曾經告訴人同意者，不得聲請再議。不起訴或緩起訴處分得聲請再議者，其再議期間及聲請再議之直接上級法院檢察署檢察長或檢察總長，應記載於送達告訴人處分書正本。死刑、無期徒刑或最輕本刑三年以上有期徒刑之案件，因犯罪嫌疑不足，經檢察官為不起訴之處分，或第二百五十三條之一之案件經檢察官為緩起訴之處分者，如無得聲請再議之人時，原檢察官應依職權逕送直接上級法院檢察署檢察長或檢察總長再議，並通知告發人。
 
-* 257 再議之聲請，原檢察官認為有理由者，應撤銷其處分，繼續偵查或起訴。原檢察官認聲請為無理由者，應即將該案卷宗及證物送交上級法院首席檢察官或檢察長。聲請已逾前條之期間者，應駁回之。原法院首席檢察官認為必要時，於依第二項之規定送交前，得親自或命令他檢察官再行偵查，分別撤銷或維持原處分；其維持原處分者，應即送交。
+> 釋：一、法院組織法，已將「首席檢察官」之用語，改為「檢察署檢察長」或「檢察總長」，第一項、第二項配合為文字修正，以符法制。二、第一項但書規定修正為第二百五十三條、第二百五十三條之一之處分經告訴人同意．．．」。三、於本條第一項、第二項增列對於「緩起訴」處分得聲請再議之規定，以保障告訴人之訴訟權。四、案件因犯罪嫌疑不足，經檢察官為不起訴或緩起訴處分，如有告訴人得聲請再議，當尊重其意見決定是否再議，但如屬告發之案件，無得聲請再議之人時，為免一經檢察官為不起訴或緩起訴處分，即告確定，自宜慎重，增訂第三項。
 
-* 258 上級法院首席檢察官或檢察長認再議之聲請為無理由者，應駁回之；認為有理由者，應分別為左列處分：一、偵查未完備者，命令原法院檢察官續行偵查。二、偵查已完備者，命令原法院檢察官起訴。
+* 256.1 被告接受撤銷緩起訴處分書後，得於七日內以書狀敘述不服之理由，經原檢察官向直接上級法院檢察署檢察長或檢察總長聲請再議。前條第二項之規定，於送達被告之撤銷緩起訴處分書準用之。
 
-* 259 羈押之被告受不起訴之處分者，視為撤銷羈押，檢察官應將被告釋放，並應即時通知法院。為不起訴處分者，扣押物應即發還。但再議期間內或聲請再議中遇有必要情形或應沒收或為偵查他罪或他被告之用應留存者，不在此限。
+> 釋：一、本條新增。二、檢察官依第二百五十三條之三規定為撤銷「緩起訴」之處分時，因事關被告之權益，應予其救濟之機會。且撤銷「緩起訴」性質上與不起訴及「緩起訴」相同，均屬檢察官之處分行為，被告如有不服，亦宜以聲請再議之方式救濟之。
 
-> 釋：一、為使偵查中之羈押期間切實遵守第一百零八條之規定，以維護人權，刪除第一項但書規定。二、羈押之被告受不起訴之處分者，既視為撤銷羈押，雖在再議期間內或聲請再議中，亦不得命具保、責付或限制住居，為保護被告權益，爰訂定明文，規定檢察官應將被告釋放。惟羈押權係由法院行使，法院對檢察官之釋放被告，自得為必要之審查，併明定檢察官釋放被告後，應即陳報法院。三、案件於不起訴處分後，依本條第二項規定，除係應沒收或為偵查他罪或他被告之用，應留存者外，應即發還。惟此際如經告訴人聲請再議，經撤銷原處分，命令續行偵查或起訴時，該原可為證據或得沒收之物，倘因發還致滅失，而無法再行扣押，勢將影響該案之續行偵查及日後之審判。爰參照第三百十七條但書之體例，於本條第二項但書增列「再議期間內或聲請再議中遇有必要情形」，以資適用。
+* 257 再議之聲請，原檢察官認為有理由者，應撤銷其處分，除前條情形外，應繼續偵查或起訴。原檢察官認聲請為無理由者，應即將該案卷及證物送交上級法院檢察署檢察長或檢察總長。聲請已逾前二條之期間者，應駁回之。原法院檢察署檢察長認為必要時，於依第二項之規定送交前，得親自或命令他檢察官再行偵查或審核，分別撤銷或維持原處分；其維持原處分者，應即送交。
 
-* 260 不起訴處分已確定者，非有左列情形之一，不得對於同一案件再行起訴：一、發見新事實或新證據者。二、有第四百二十條第一項第一款、第二款、第四款或第五款所定得為再審原因之情形者。
+> 釋：一、法院組織法，已將「首席檢察官」之用語，改為「檢察署檢察長」或「檢察總長」，爰配合為文字修正，以符法制。二、被告不服撤銷「緩起訴」之處分，而聲請再議時，如原檢察官撤銷其處分，使回復至原來「緩起訴」之狀態，因無繼續偵查或起訴之問題，故於第一項設除外之規定。三、配合增訂第二百五十六條之一，第三項「前條」修正為「前二條」。四、第四項增訂「或審核」之文字，以資適用。
+
+* 258 上級法院檢察署檢察長或檢察總長認再議為無理由者，應駁回之；認為有理由者，第二百五十六條之一之情形應撤銷原處分，第二百五十六條之情形應分別為左列處分：一、偵查未完備者，得親自或命令他檢察官再行偵查，或命令原法院檢察署檢察官續行偵查。二、偵查已完備者，命令原法院檢察署檢察官起訴。
+
+> 釋：一、法院組織法已將「首席檢察官」之用語，改為「檢察署檢察長」或「檢察總長」，爰配合為文字修正，以符法制。二、上級檢察官處理再議之程序，同時適用於聲請再議及依職權再議之情形，首段再議「之聲請」文字應予修正。三、上級法院檢察書檢察長或檢察總長如認被告之再議為有理由，應撤銷原處分，使其回復至原來「緩起訴」之狀態，因無續行偵查或起訴之問題，故與第二百五十六條之情形分別規定。四、為加強二審檢察官之監督及偵查功能，修正第一款，以減少案件多次發回續行偵查之累，避免案件久懸未決。
+
+* 258.1 告訴人不服前條之駁回處分者，得於接受處分書後十日內委任律師提出理由狀，向該管第一審法院聲請交付審判。
+
+> 釋：一、本條新增。二、對檢察官起訴裁量權之制衡，除內部監督機制外，宜有檢察機關以外之監督機制，爰參考德日之規定，告訴人或告發人於不服上級檢察署之駁回處分者，得向法院聲請交付審判，由法院介入審查，以提供告訴人多一層救濟途徑。基於保障被告審級利益，明定應向該管第一審法院聲請交付審判。為防止濫行提出聲請，虛耗訴訟資源，明定交付審判之案件，必須委任律師提出理由狀，程序始稱合法。
+
+* 258.2 交付審判之聲請，於法院裁定前，得撤回之，於裁定交付審判後第一審辯論終結前，亦同。撤回交付審判之聲請，書記官應速通知被告。撤回交付審判聲請之人，不得再行聲請交付審判。
+
+> 釋：一、本條新增。二、告訴人聲請交付審判，法院裁定前，或於法院裁定交付審判後第一審辯論終結前，若聲請人已無不服，自得准其撤回，增訂第一項。撤回交付審判之聲請，關係被告之權益甚鉅，故於第二項規定書記官應速通知被告。但為免案件久懸未決，復於第三項規定撤回之人，不得再為交付審判之聲請，以資慎重。
+
+* 258.3 聲請交付審判之裁定，法院應以合議行之。法院認交付審判之聲請不合法或無理由者，應駁回之；認為有理由者，應為交付審判之裁定，並將正本送達於聲請人、檢察官及被告。法院為前項裁定前，得為必要之調查。法院為交付審判之裁定時，視為案件已提起公訴。被告對於第二項交付審判之裁定，得提起抗告；駁回之裁定，不得抗告。
+
+> 釋：一、本條新增。二、聲請交付審判之裁定，為求慎重，法院應以合議方式為之，增訂第一項。告訴人向法院聲請交付審判，法院若認聲請係無理由或有理由者之處置，於第二項明定。三、法院為明再議駁回之案件，是否確有裁定交付審判之必要，允宜賦予得調查證據之職權，增訂第三項。四、基於「無訴即無裁判」之刑事訴訟法基本原理，應認交付審判之裁定，視為該案件已提起公訴，爰於第四項明定之。五、法院駁回聲請交付審判之裁定或裁定准予交付審判，性質上均屬程序事項之裁定，為免訴訟關係久懸未決，爰於本條第五項明定。
+
+* 258.4 交付審判之程序，除法律別有規定外，適用第二編第一章第三節之規定。
+
+> 釋：一、本條新增。二、依第二百五十八條之規定，法院為交付審判之裁定時，視為案件已提起公訴。因此，有關交付審判後之訴訟程序，宜與檢察官起訴之程序同，爰明定適用第二編第一章第三節之規定。
+
+* 259 羈押之被告受不起訴或緩起訴之處分者，視為撤銷羈押，檢察官應將被告釋放，並應即時通知法院。為不起訴或緩起訴之處分者，扣押物應即發還。但法律另有規定、再議期間內、聲請再議中或聲請法院交付審判中遇有必要情形，或應沒收或為偵查他罪或他被告之用應留存者，不在此限。
+
+> 釋：一、偵查中羈押之被告，受緩起訴之處分者，應與被告受不起訴處分者同，其羈押原因已消滅，而視為撤銷羈押，第一項修正增列。二、第二百五十九條之一增訂不起訴或緩起訴處分，扣押物沒收之相關規定，爰配合於本條第二項增列「法律另有規定」等文字，並將聲請法院交付審判中，遇有必要應留存扣押物之情形，增列於但書。
+
+* 259.1 檢察官依第二百五十三條或第二百五十三條之一為不起訴或緩起訴之處分者，對供犯罪所用、供犯罪預備或因犯罪所得之物，以屬於被告者為限，得單獨聲請法院宣告沒收。
+
+> 釋：一、本條新增。二、為免扣押物無法適當處置，導致檢察官因此減低依職權不起訴或緩起訴之意願，爰於本條明定供犯罪所用或供犯罪預備及因犯罪所得之物，以屬於被告者為限，檢察官得單獨聲請宣告沒收之規定。
+
+* 260 不起訴處分已確定或緩起訴處分期滿未經撤銷者，非有左列情形之一，不得對於同一案件再行起訴：一、發現新事實或新證據者。二、有第四百二十條第一項第一款、第二款、第四款或第五款所定得為再審原因之情形者。
+
+> 釋：對於檢察官之起訴裁量權已有適當之內部及外部監督，對於不起訴處分已確定或緩起訴期滿未經撤銷者主管機關，自宜賦予實質之確定力，爰修訂「緩起訴處分期滿未經撤銷者」之規定。
 
 * 261 犯罪是否成立或刑罰應否免除，以民事法律關係為斷者，檢察官應於民事訴訟終結前，停止偵查。
 
@@ -846,9 +896,9 @@
 
 * 325 告訴或請求乃論之罪，自訴人於第一審辯論終結前，得撤回其自訴。撤回自訴，應以書狀為之。但於審判期日或受訊問時，得以言詞為之。書記官應速將撤回自訴之事由，通知被告。撤回自訴之人，不得再行自訴或告訴或請求。
 
-* 326 法院或受命法官，得於第一次審判期日前，訊問自訴人、被告及蒐集或調查證據，於發見案件係民事或利用自訴程序恫嚇被告者，得曉諭自訴人撤回自訴。前項訊問不公開之；非有必要，不得先行傳訊被告。第一項訊問及調查結果，如認為案件有第二百五十二條至第二百五十四條之情形者，得以裁定駁回自訴，並準用第二百五十三條第二項至第四項之規定。駁回自訴之裁定已確定者，非有第二百六十條各款情形之一，不得對於同一案件再行自訴。
+* 326 法院或受命法官，得於第一次審判期日前，訊問自訴人、被告及蒐集或調查證據，於發見案件係民事或利用自訴程序恫嚇被告者，得曉諭自訴人撤回自訴。前項訊問不公開之；非有必要，不得先行傳訊被告。第一項訊問及調查結果，如認為案件有第二百五十二條至第二百五十四條之情形者，得以裁定駁回自訴，並準用第二百五十三條之二第一項第一款至第四款、第二項及第三項之規定。駁回自訴之裁定已確定者，非有第二百六十條各款情形之一，不得對於同一案件再行自訴。
 
-> 釋：一、配合法院組織法之修正，將「推事」修改為法官。二、自訴改採律師代理制度後，自訴案件之品質將會提高，利用自訴恫嚇被告或民事案件，亦會減少，且實務上，法院能曉諭律師撤回自訴之情形不多，何況曉諭撤回結果，如果被告將來反而告訴自訴人誣告時，自訴人可能責怪法院最初曉諭其撤回，是第一項後段，無保留之必要。三、本法第二百五十三條第四項關於慰撫金得為民事強制執行名義之規定，於裁定駁回自訴之情形，允宜準用，俾資周妥，爰修正第三項後段。
+> 釋：原第二百五十三條第二項至第四項之規定均予以刪除，另增列第二百五十三條之一、第二百五十三條之二，為兼顧被告及自訴人之權益，仍得以裁定駁回自訴，並準用第二百五十三條之二第一項第一款至第四款、第二項及第三項之規定，修正第三項，以資適用。
 
 * 327 命自訴人到場，應傳喚之。自訴人經合法傳喚，無正當之理由不到場者，得拘提之。第七十一條至第七十三條，第七十七條至第八十三條及第八十九條至第九十一條之規定，於自訴人之傳喚及拘提準用之。
 
