--- a/行政-經濟及能源/電業法.md
+++ b/行政-經濟及能源/電業法.md
@@ -6,11 +6,15 @@
 
 * 4 本法所稱營業區域，謂依前條規定，取得電業權者供給電能之區域。
 
-* 5 本法所稱中央主管機關為經濟部；所稱地方主管機關，在省（市）為建設廳或主管局；在縣（市）為縣（市）政府。
+* 5 本法所稱主管機關：在中央為經濟部；在地方為直轄市政府或縣（市）政府。
+
+> 釋：配合台灣省政府功能業務與組織調整，爰予以修正之。
 
 * 6 本法所稱電業設備，謂發電、輸電、配電所應用之一切設備；所稱主要發電設備，謂能源裝置原動機、發電機；所稱中心發電所，謂中央主管機關規定之高效力發電所；所稱電力網，謂統籌分配供給多數營業區域電業之輸電線路。
 
-* 7 電業經營分左列各種：一、公營：國營、省營、市營、縣營、鄉鎮營屬之。二、民營：人民出資經營者屬之。政府與人民合營之電業，政府資本超過百分之五十者，視為公營；其由公營事業轉投資與人民合營，其出資超過百分之五十者亦同。
+* 7 電業經營分左列各種：一、公營：國營、直轄市營、縣（市）營、鄉（鎮、市）營屬之。二、民營：人民出資經營者屬之。政府與人民合營之電業，政府資本超過百分之五十者，視為公營；其由公營事業轉投資與人民合營，其出資超過百分之五十者，亦同。
+
+> 釋：配合台灣省政府功能業務與組織調整，爰予以修正之。
 
 * 8 水力發電之容量在二萬瓦以上者國營。但經中央主管機關特許者，不在此限。
 
@@ -20,7 +24,9 @@
 
 * 11 前條各級電業，因供電容量變更，致超過或不及其本級之限度時，應報請中央主管機關核定升級或降級。
 
-* 12 電業向主管機關申請或報告時，其程序依左列規定：一、縣（市）營、鄉鎮營或民營電業，報由地方主管機關核轉中央主管機關。二、國營、省（市）營電業，報由其事業所屬機關核轉中央主管機關，並將副本分送有關地方主管機關。三、電業營業區域及於數個行政區域者，按其申請或報告事件之性質：其涉及全部營業區域者，報由其營業主要部分所屬行政區域之地方主管機關核轉中央主管機關；其涉及某一行政區域者，報由該行政區域之地方主管機關核轉中央主管機關，同時均應將副本分送各有關地方主管機關。前項申請或報告，於必要時得逕報中央主管機關或上級地方主管機關。
+* 12 電業向主管機關申請或報告時，其程序依左列規定：一、鄉（鎮、市）營或民營電業，報由地方主管機關核轉中央主管機關。二、國營、直轄市營、縣（市）營電業，報由其事業所屬機關核轉中央主管機關，並將副本分送有關地方主管機關。三、電業營業區域及於數個行政區域者，按其申請或報告事件之性質：其涉及全部營業區域者報由其營業主要部分所屬行政區域之地方主管機關核轉中央主管機關；其涉及某一行政區域者，報由該行政區域之地方主管機關核轉中央主管機關，同時均應將副本分送各有關地方主管機關。前項申請或報告，於必要時得逕報中央主管機關。
+
+> 釋：配合台灣省政府功能業務與組織調整，爰修正第一項第一款及第二款。
 
 * 13 電業應置主任技術員，其資格由中央主管機關定之。
 
@@ -38,7 +44,9 @@
 
 * 20 在同一區域內有二個以上經營電業之申請時，應以申請在前者為優先，予以核准；其申請日期相同者，應以計劃較善者為優先；計劃相同者，限期令各申請人自行協議後重行申請，協議不諧或不依協議時，由主管機關召集各申請人抽籤定之。
 
-* 21 省營、市營、縣營或鄉鎮營之電業，其營業區域，除經中央主管機關特許外，不得超過其行政區域。
+* 21 直轄市營、縣（市）營或鄉（鎮、市）營之電業，其營業區域，除經中央主管機關特許外，不得超過其行政區域。
+
+> 釋：配合台灣省政府功能業務與組織調整，爰予以修正之。
 
 * 22 電業聯絡通電及電力網之輸電線路，經中央主管機關核准後，得經過其他電業營業區域，但不得侵害其電業權。
 
@@ -114,7 +122,9 @@
 
 * 58 電業自籌備開始起，應按其等級，於左列期間內開始供電：一級二級電業三年。三級四級電業二年。因特別障礙不能依前項規定開始供電者，應詳敘理由，申請中央主管機關酌予延期。
 
-* 59 電業擬訂或修正營業規則、電價及各種收費率，應送經地方主管機關或其事業所屬機關加具意見，轉送中央主管機關核定後，在當地公告之。在交通不便地方，其電價得於省（市）主管機關審核後，先予試行。但經中央主管機關核減時，應退還其溢收部分。國營電業費率之計算，依國營事業管理法第二十條之規定。
+* 59 電業擬訂或修正營業規則、電價及各種收費率，應送經地方主管機關或其事業所屬機關加具意見，轉送中央主管機關核定後，在當地公告之。國營電業費率之計算，依國營事業管理法第二十條之規定。
+
+> 釋：原條文第二項予以刪除。現今交通與通訊相當便利，交通不便地方，其電價「先予試行」之規定，已經不具實質意義，爰予刪除。
 
 * 60 電價之訂定，應以電業收入，抵償其必需成本，並獲得合理之利潤。合理利潤，應以有效使用中之固定資產重置現值及營運資金為基準，並參酌當地通行利潤率計算之。
 
@@ -146,7 +156,9 @@
 
 * 74 政府機關為防禦災害要求緊急供電時，電業不得拒絕，其所需費用，由該機關負擔。
 
-* 75 電器承裝業，非向所在縣（市）地方主管機關登記，並向該區內之電業訂立契約，不得營業。電器承裝業之電匠，非經所在縣（市）地方主管機關考驗及格給予憑證，不得工作。前項登記及考驗，地方主管機關得委託該區域內之電業辦理。電器承裝業管理規則及電匠考驗規則，由省（市）主管機關擬訂，報請中央主管機關備案。
+* 75 電器承裝業，非向所在直轄市或縣（市）地方主管機關登記，並向該區內之電業訂立契約，不得營業。電器承裝業之電匠，非經所在直轄市或縣（市）地方主管機關考驗及格給予憑證，不得工作。前二項登記及考驗，地方主管機關辦理有困難時，得報請中央主管機關統籌辦理或委託該區域內之電業辦理。電器承裝業登記、撤銷或廢止登記及管理之規則，由中央主管機關定之。電匠考驗、發照、撤銷或廢止證照及管理之規則，由中央主管機關定之。
+
+> 釋：一、第一項酌作修正。將「縣（市）地方主管機關修正為「直轄市或縣（市）地方主管機關」。二、第二項配合第一項，酌作文字修正。三、第三項增訂地方主管機關辦理有困難時，得報請中央主管機關統籌辦理。四、原條文第四項分為二：分列第四項有關電器承裝業管理規則之訂定及第五項電匠考驗規則之訂定。
 
 * 76 電業負責人應於就任十五日內，報請中央主管機關備案。
 
@@ -174,7 +186,9 @@
 
 * 88 小型電業，得不設置主任技術員。
 
-* 89 小型電業，擬定或修正營業規則、電價及其各種收費率，應於省（市）主管機關核准後公告之，並轉報中央主管機關備案。
+* 89 小型電業，擬定或修正營業規則、電價及其各種收費率，應於中央主管機關核准後公告之。
+
+> 釋：酌作文字修正。將「省（市）主管機關」修正為「中央主管機關」；另刪除句末「並轉報中央主管機關備案」等文字。
 
 * 90 小型電業之供電時間，每日至少為六小時。
 
