--- a/行政-預算及主計/會計法.md
+++ b/行政-預算及主計/會計法.md
@@ -16,7 +16,9 @@
 
 * 9 政府會計之組織為左列五種：一、總會計。二、單位會計。三、分會計。四、附屬單位會計。五、附屬單位會計之分會計。前項各款會計，均應用複式簿記。但第三款、第五款分會計之事務簡單者，不在此限。第一項各款會計之帳務處理，得視事實需要，呈請上級主計機關核准後，集中辦理。
 
-* 10 中央、省（市）、縣（市）政府之會計，各為一總會計。
+* 10 中央、直轄市、縣（市）、鄉（鎮、市）之會計，各為一總會計。
+
+> 釋：一、配合地方制度法第十四條及財政收支劃分法第三條，爰增列鄉（鎮、市）之會計為一總會計。二、配合臺灣省政府功能業務與組織調整，將省之會計為一總會計之規定刪除。三、查目前各級政府總會計，係分別以「中央總會計制度」、「臺北市總會計制度」、「高雄市總會計制度」、「臺灣省各縣（市）總會計制度」之名稱定之，為符實際，爰將「政府」二字刪除。
 
 * 11 左列各款會計，為單位會計：一、在總預算有法定預算之機關單位之會計。二、在總預算不依機關劃分而有法定預算之特種基金之會計。
 
