證券交易法 2002.5.14

--- a/行政-財政及金融/證券交易法.md
+++ b/行政-財政及金融/證券交易法.md
@@ -36,6 +36,10 @@
 
 * 14 本法所稱財務報告，謂發行人及證券商、證券交易所依照法令規定，應定期編送主管機關之財務報告。前項財務報告之編製準則，由主管機關以命令定之。
 
+* 14.1 公開發行公司、證券交易所、證券商及第十八條所定之事業應建立財務、業務之內部控制制度。主管機關得訂定前項公司或事業內部控制制度之準則。第一項之公司或事業，除經主管機關核准者外，應於每會計年度終了後四個月內，向主管機關申報內部控制聲明書。
+
+> 釋：一、本條新增。二、配合行政程序法之施行，將現行「公開發行公司建立內部控制制度實施要點」、「證券暨期貨市場各服務事業建立內部控制制度實施要點」之規定，提昇至法律位階。三、前開要點規定內容涉及人民權利義務，依行政程序法之規定，其訂定應有法律之依據，爰增列訂定上開要點等之授權依據。
+
 * 15 依本法經營之證券業務，其種類如左：一、有價證券之承銷及其他經主管機關核准之相關業務。二、有價證券之自行買賣及其他經主管機關核准之相關業務。三、有價證券買賣之行紀、居間、代理及其他經主管機關核准之相關業務。
 
 > 釋：世界各國證券商得經營業務之項目及範圍，因地區國家或時間之關係而有所不同，為擴大我國證券商得經營業務之範圍，及因應我國證券市場自由化、國際化之需要，有必要概括規定相關業務之項目，以避免掛一漏萬，爰於各款增訂概括規定。
@@ -132,7 +136,9 @@
 
 * 29 公司債之發行如由金融機構擔任保證人者，得視為有擔保之發行。
 
-* 30 公司募集、發行有價證券，於申請審核時，除依公司法所規定記載事項外，應另行加具公開說明書。前項公開說明書，其應記載之事項，由主管機關以命令定之。
+* 30 公司募集、發行有價證券，於申請審核時，除依公司法所規定記載事項外，應另行加具公開說明書。前項公開說明書，其應記載之事項，由主管機關以命令定之。公司申請其有價證券在證券交易所上市或於證券商營業處所買賣者，準用第一項之規定；其公開說明書應記載事項之準則，分別由證券交易所與證券櫃檯買賣中心擬訂，報請主管機關核定。
+
+> 釋：第三項新增，配合行政程序法之施行，將現行「臺灣證券交易所股份有限公司初次申請有價證券上市之公開說明書應行記載事項要點」等規定，提昇至法律位階。
 
 * 31 募集有價證券，應先向認股人或應募人交付公開說明書。違反前項之規定者，對於善意之相對人因而所受之損害，應負賠償責任。
 
@@ -152,9 +158,13 @@
 
 > 釋：一、發行公司之財務報告為投資人投資有價證券之主要參考依據，除必須符合可靠性、公開性外，尚須具時效性，使投資人了解公司之現狀與未來。本條現行第一項規定年度財務報告之申報及公告，須俟提經股東常會承認，而股東常會依公司法第一百七十二條第二項規定應於營業年度終了後六個月內召集，惟同項但書復規定有正當理由報經公司主管機關核准者，不在此限，致屢有於營業年度終了六個月後再行申報及公告，已失去其時效性，爰修正內容如次：（一）將年度財務報告申報期限，提前於營業年度終了後四個月內，並僅須經會計師查核簽證，提經董事會通過、監察人承認後，即可公告並向主管機關申報，免再俟提經股東會承認後申報。（二）將現以行政命令規定，公告並申報半營業年度財務報告期限改為半營業年度結束後二個月內，暨增加公告並申報第一季、第三季報與每月營業情形（包括營業額、背書保證資料等）予以納入。二、增訂第二項，對先公告並向主管機關申報之財務報告，與提經股東會承認不一致之再行申報，及發生偶發重大事項之公告及申報規定。三、第三項新增。鑒於發行公司除在募集與發行有價證券之年度，依本法第三十條始編製公開說明書，對公司財務業務狀況與展望有較詳盡報導外，在未辦理增資或發行公司債之年度，雖於召開股東常會，備有財務報告及議事手冊或議事錄，內容又失之簡略。為使投資人對公司之現況及未來有較詳盡之認識，及配合推動僑外資投資證券市場，編製中英對照，內容較詳盡之年報，對於發行公司本身亦屬有益，爰增訂第三項。四、現行第三項移列為第四項，並配合前三項之修正，明定有價證券已上市之公司，其有關財務報告，須分別以抄本送證券交易所及證券商同業公會，若僅在證券商營業處所買賣者，並無庸抄送證券交易所，僅須送交證券商同業公會，爰作文字修正。五、第六項新增。依公司法第二百九十三條第一項規定，發行有價證券之公司如經裁定重整，公司之董事、監察人之職權，應予停止。則第一項所規定申報年度、半年度財務報告即無法辦理，爰增訂第六項。
 
-* 37 會計師辦理前條財務報告之查核簽證，應經主管機關之核准；其準則由主管機關定之。會計師辦理前項簽證，發生錯誤或疏漏者，主管機關得視情節之輕重，為左列處分：一、警告。二、停止其二年以內辦理本法所定之簽證。三、撤銷簽證之核准。前條之財務報告，應備置於公司及其分支機構，以供股東及公司債權人之查閱或抄錄。
+* 36.1 公開發行公司取得或處分資產、從事衍生性商品交易、資金貸與他人、為他人背書或提供保證及揭露財務預測資訊等重大財務業務行為，其適用範圍、作業程序、應公告、申報及其他應遵行事項之處理準則，由主管機關定之。
 
-> 釋：一、為加強發行公司管理，促進公司財務充分公開及忠實表達，首須健全會計師財務之簽證，強化其功能，特規定會計師查核簽證發行公司財務報告應經主管機關之許可，俾能擇優汰劣，提高簽證品質，爰授權主管機關訂定許可準則以資規範。會計師於辦理本法之簽證時，發生錯誤或疏漏者，主管機關並得按其情節予以處分，俾資警誡。爰增訂本條第一項、第二項及第三項。二、本條原規定事項，改列為第四項。
+> 釋：一、本條新增。二、配合行政程序法之施行，將現行相關「公開發行公司取得或處分資產處理要點」、「公開發行公司從事衍生性商品交易處理要點」「上市上櫃公司背書保證處理要點」等規定，提昇至法律位階。
+
+* 37 會計師辦理第三十六條財務報告之查核簽證，應經主管機關之核准；其準則，由主管機關定之。會計師辦理前項查核簽證，除會計師法及其他法律另有規定者外，應依主管機關所定之查核簽證規則辦理。會計師辦理第一項簽證，發生錯誤或疏漏者，主管機關得視情節之輕重，為左列處分：一、警告。二、停止其二年以內辦理本法所定之簽證。三、撤銷簽證之核准。第三十六條第一項之財務報告，應備置於公司及其分支機構，以供股東及公司債權人之查閱或抄錄。
+
+> 釋：一、配合增訂第三十六條之一，將第一項之「前條」修正為「第三十六條」。二、增訂第二項。現行「會計師查核簽證財務報表規則」係財政部與經濟部會銜發布，其內容因涉及人民權利義務，依行政程序法之規定，其訂定應有法律之依據，爰增列訂定上開規則之授權依據。三、原第二項移列為第三項，並將「前項」修正為「第一項」。四、原第三項移列為第四項，並作文字修正。
 
 * 38 主管機關為有價證券募集或發行之核准，因保護公益或投資人利益，對發行人、證券承銷商或其他關係人，得命令其提出參考或報告資料，並得直接檢查其有關書表、帳冊。有價證券發行後，主管機關得隨時命令發行人提出財務、業務報告或直接檢查財務、業務狀況。
 
@@ -562,9 +572,9 @@
 
 > 釋：罰鍰處分修正為以新臺幣為單位；並為確實達行政罰鍰效果，斟酌將罰鍰額度提高。
 
-* 178 有左列情事之一者，處新臺幣十二萬元以上六十萬元以下罰鍰：一、違反第二十二條之二第一項、第二項、第二十五條第一項、第二項、第四項、第二十六條之一、第三十六條第四項、第四十一條、第四十三條之一第一項、第四十三條之六第五項至第七項、第五十八條、第六十九條第一項、第七十三條、第七十七條、第七十九條、第一百四十一條、第一百四十四條、第一百四十五條第二項、第一百四十七條、第一百五十二條或第一百五十九條之規定者。二、發行人、公開收購人或其關係人、證券商或其委託人、證券商同業公會、證券交易所或第十八條所定之事業，對於主管機關命令提出之帳簿、表冊、文件或其他參考或報告資料，屆期不提出，或對於主管機關依法所為之檢查予以拒絕或妨礙者。三、發行人、公開收購人、證券商、證券商同業公會、證券交易所或第十八條所定之事業，於依法或主管機關基於法律所發布之命令規定之帳簿、表冊、傳票、財務報告或其他有關業務之文件，不依規定製作、申報、公告、備置或保存者。四、違反主管機關依第二十六條第二項所定之公開發行公司董事、監察人股權成數及查核實施規則之規定者。五、違反第二十八條之二第二項、第四項至第七項或主管機關依第三項所規定之事項者。六、違反第四十三條之二第一項、第四十三條之三第一項、第四十三條之五第一項或主管機關依第四十三條之一第四項所規定之事項者。有前項第二款至第四款規定之情事，經主管機關處罰鍰，並責令限期辦理；屆期仍不辦理者，得繼續限期令其辦理，並按次連續各處新臺幣二十四萬元以上一百二十萬元以下罰鍰，至辦理為止。
+* 178 有左列情事之一者，處新臺幣十二萬元以上六十萬元以下罰鍰：一、違反第十四條之一第一項、第三項、第二十二條之二第一項、第二項、第二十五條第一項、第二項、第四項、第二十六條之一、第三十六條第四項、第四十一條、第四十三條之一第一項、第四十三條之六第五項至第七項、第五十八條、第六十九條第一項、第七十三條、第七十七條、第七十九條、第一百四十一條、第一百四十四條、第一百四十五條第二項、第一百四十七條、第一百五十二條或第一百五十九條之規定者。二、發行人、公開收購人或其關係人、證券商或其委託人、證券商同業公會、證券交易所或第十八條所定之事業，對於主管機關命令提出之帳簿、表冊、文件或其他參考或報告資料，屆期不提出，或對於主管機關依法所為之檢查予以拒絕或妨礙者。三、發行人、公開收購人、證券商、證券商同業公會、證券交易所或第十八條所定之事業，於依法或主管機關基於法律所發布之命令規定之帳簿、表冊、傳票、財務報告或其他有關業務之文件，不依規定製作、申報、公告、備置或保存者。四、違反主管機關依第二十六條第二項所定之公開發行公司董事、監察人股權成數及查核實施規則之規定者。五、違反第二十八條之二第二項、第四項至第七項或主管機關依第三項所規定之事項者。六、違反第四十三條之二第一項、第四十三條之三第一項、第四十三條之五第一項或主管機關依第四十三條之一第四項所規定之事項者。有前項第二款至第四款規定之情事，經主管機關處罰鍰，並責令限期辦理；屆期仍不辦理者，得繼續限期令其辦理，並按次連續各處新臺幣二十四萬元以上一百二十萬元以下罰鍰，至辦理為止。
 
-> 釋：一、於第一項第一款增列違反私募有價證券規定之處罰。另為配合第一百七十七條之修正違反第四十一條取消刑罰之規定，增列「第四十一條」。二、於第一項第二款、第三款及第六款增列公開收購人違反規定之處罰。三、第二項酌作文字修正。
+> 釋：配合增訂第十四條之一，對於違反該條之行為者，為維持行政上秩序，達規範之目的，實有處以罰鍰之必要，故於第一項第一款增訂罰則。
 
 * 179 法人違反本法之規定者，依本章各條之規定處罰其為行為之負責人。
 
