刑事訴訟法 2002.5.17

--- a/司法-刑事/刑事訴訟法.md
+++ b/司法-刑事/刑事訴訟法.md
@@ -256,9 +256,9 @@
 
 > 釋：羈押處分，剝奪人民身體之自由，嚴重影響人民權益，現行條文規定之羈押要件及羈押理由，尚嫌簡略，爰就羈押之要件及羈押之理由設更明確且嚴謹之規定，用符法制。又為使被告於受訊問時，有辯護人到場，俾能對被告為適當之保障，增訂第二項明定應告知被告得選任辯護人到場，以資明確；另規定第一項所依據之事實，應告知被告及其辯護人，並記載於筆錄，以資周延。
 
-* 101.1 被告經法官訊問後，認為犯左列各款之罪，其嫌疑重大，有事實足認為有反覆實施同一犯罪之虞，而有羈押之必要者，得羈押之：一、刑法第一百七十四條第一項、第二項、第四項、第一百七十五條第一項、第二項之放火罪、第一百七十六條之準放火罪。二、刑法第二百二十四條之強制猥褻罪、第二百二十七條與幼年男女性交或猥褻罪、第二百七十七條第一項之傷害罪。但未經告訴或其告訴已經撤回或已逾告訴期間者，不在此限。三、刑法第三百零二條之妨害自由罪。四、刑法第三百零四條強制罪、第三百零五條之恐嚇危害安全罪。五、刑法第三百二十一條、第三百二十二條之竊盜罪。六、刑法第三百二十五條至第三百二十七條之搶奪罪。七、刑法第三百二十九條之準強盜罪。八、刑法第三百四十條之常業詐欺罪。九、刑法第三百四十六條之恐嚇取財罪。前條第二項、第三項之規定，於前項情形準用之。
+* 101.1 被告經法官訊問後，認為犯左列各款之罪，其嫌疑重大，有事實足認為有反覆實施同一犯罪之虞，而有羈押之必要者，得羈押之：一、刑法第一百七十四條第一項、第二項、第四項、第一百七十五條第一項、第二項之放火罪、第一百七十六條之準放火罪。二、刑法第二百二十一條之強制性交罪、第二百二十四條之強制猥褻罪、第二百二十四條之一之加重強制猥褻罪、第二百二十五條之乘機性交猥褻罪、第二百二十七條之與幼年男女性交或猥褻罪、第二百七十七條第一項之傷害罪。但其須告訴乃論，而未經告訴或其告訴已經撤回或已逾告訴期間者，不在此限。三、刑法第三百零二條之妨害自由罪。四、刑法第三百零四條之強制罪、第三百零五條之恐嚇危害安全罪。五、刑法第三百二十一條、第三百二十二條之竊盜罪。六、刑法第三百二十五條至第三百二十七條之搶奪罪。七、刑法第三百四十條之常業詐欺罪。八、刑法第三百四十六條之恐嚇取財罪。前條第二項、第三項之規定，於前項情形準用之。
 
-> 釋：配合刑法第二百二十七條文字之修正作修改。將「姦淫或猥褻罪」修改為「與幼年男女性交或猥褻罪」。
+> 釋：一、強制性交罪更甚於強制猥褻罪，且再犯率高，有預防羈押之必要。二、修正第一項第二款，增列刑法之第二百二十一條之強制性交罪、第二百二十四條之一之加重強制猥褻罪及第二百二十五條之乘機性交猥褻罪。三、原條文第一項第七款刪除。
 
 * 101.2 被告經法官訊問後，雖有第一百零一條第一項或第一百零一條之一第一項各款所定情形之一而無羈押之必要者，得逕命具保、責付或限制住居；其有第一百十四條各款所定情形之一者，非有不能具保、責付或限制住居之情形，不得羈押。
 
