--- a/行政-經濟及能源/電業法.md
+++ b/行政-經濟及能源/電業法.md
@@ -116,7 +116,9 @@
 
 * 55 電業對於第五十條至第五十二條所規定之事項，為避免特別危險或預防非常災害，得先行處置，但應於三日內申報所在地地方政府，並通知所有人或占有人。
 
-* 56 電業對於第五十一條至第五十五條所規定之事項，與所有人或占有人發生爭議時，得請所在地地方政府處理之。
+* 56 電業對於第五十一條至第五十五條所規定之事項，與所有人或占有人發生爭議時，得請所在地地方政府處理之。地方政府處理電業用地爭議方式、期間及協調之準則，由中央主管機關定之。
+
+> 釋：第二項新增。現行「地方政府處理電業用地爭議準則」係屬中央電業主管機關訂定之職權命令，爰配合「行政程序法」施行，為明確規定授權依據，明定「地方政府處理電業用地爭議準則」由中央主管機關訂定。
 
 * 57 電業在其營業區域內，對於請求供電者，非有正當理由，不得拒絕。
 
@@ -159,6 +161,10 @@
 * 75 電器承裝業，非向所在直轄市或縣（市）地方主管機關登記，並向該區內之電業訂立契約，不得營業。電器承裝業之電匠，非經所在直轄市或縣（市）地方主管機關考驗及格給予憑證，不得工作。前二項登記及考驗，地方主管機關辦理有困難時，得報請中央主管機關統籌辦理或委託該區域內之電業辦理。電器承裝業登記、撤銷或廢止登記及管理之規則，由中央主管機關定之。電匠考驗、發照、撤銷或廢止證照及管理之規則，由中央主管機關定之。
 
 > 釋：一、第一項酌作修正。將「縣（市）地方主管機關修正為「直轄市或縣（市）地方主管機關」。二、第二項配合第一項，酌作文字修正。三、第三項增訂地方主管機關辦理有困難時，得報請中央主管機關統籌辦理。四、原條文第四項分為二：分列第四項有關電器承裝業管理規則之訂定及第五項電匠考驗規則之訂定。
+
+* 75.1 裝有電力設備之工廠、礦場、供公眾使用之建築物及受電電壓屬高壓以上之用電場所，應置專任電氣技術人員或委託用電設備檢驗維護業負責維護與電業供電設備分界點以內一般及緊急電力設備之用電安全。未依前項規定置專任電氣技術人員或委託用電設備檢驗維護業維護電力設備者，電業得拒絕供電。第一項場所之認定範圍及標準，由中央主管機關定之。專任電氣技術人員及用電設備檢驗維護業登記、撤銷或廢止登記及管理之規則，由中央主管機關定之。
+
+> 釋：一、本條新增。二、臺灣省政府訂有「電氣技術人員管理規則」，管理用電場所及電氣技術人員。精省後，改由中央電業主管機關訂定職權命令管理，爰配合「行政程序法」施行，為明確規定授權依據，明定專任電氣技術人員及用電設備檢驗維護業登記、撤銷或廢止登記及管理之規則由中央主管機關訂定。
 
 * 76 電業負責人應於就任十五日內，報請中央主管機關備案。
 
@@ -206,7 +212,9 @@
 
 * 97 工礦廠商、農田水利、機關學校、醫院，有左列情形之一者，得置發電設備，專供自用：一、當地無電能供應或供應不足，而預期在一年內無法增加供應者。二、有副產物可以利用者。三、供生產用之蒸氣可利用以發電者。四、電源供給絕對不能停止者。五、購電成本超過自行發電成本，足以妨礙其業務發展者。
 
-* 98 自用發電設備之發電容量，在五百瓦以上者，購置或擴充時，應申請中央主管機關核發工作許可證，不及五百瓦者，應報請地方主管機關核准，轉報中央主管機關備案。
+* 98 自用發電設備之發電容量，在五百瓩以上者，購置或擴充時，應申請中央主管機關核發工作許可證，不及五百瓩者，應報請地方主管機關核准，轉報中央主管機關備案。自用發電設備許可、登記、撤銷或廢止登記及變更等事項之申請程序、期間、審查項目及管理之規則，由中央主管機關定之。
+
+> 釋：第二項新增。現行「自用發電設備登記規則」係屬中央電業主管機關訂定之職權命令，爰配合「行政程序法」施行，為明確規定授權依據，明定本法第七章有關自用發電設備登記管理等事項，由中央主管機關訂定。
 
 * 99 自用發電設備設置之線路，應在其自有地區內設置之。但不妨害當地電業，並經中央主管機關核准者，不在此限。
 
@@ -239,6 +247,10 @@
 * 113 電匠違反第七十五條第二項規定者，處一百元以下罰鍰，並得勒令停止工作。
 
 * 114 本法施行前，各電業訂立之專營合約及營業規則，如與本法之規定不符，應於本法施行後六個月內修正之。
+
+* 114.1 主管機關依本法規定受理申請許可、查驗、核給證照或登記，應收取審查費、證照費或登記費；其收費標準，由中央主管機關定之。
+
+> 釋：一、本條新增。二、現行電業登記規費係於「電業登記規定」訂定，鑑於規費收取涉及人民權利義務甚鉅，本法對於規費收取並無授權規定，爰配合「行政程序法」施行，為明確規定授權依據，提昇法律位階，爰增訂本條。
 
 * 115 本法自公布日施行。
 
