--- a/行政-內政/自來水法.md
+++ b/行政-內政/自來水法.md
@@ -1,14 +1,22 @@
 * 1 為策進自來水事業之合理發展，加強其營運之有效管理，以供應充裕而合於衛生之用水，改善國民生活環境，促進工商業發達，特制定本法。本法未規定者，適用其他法律。
 
-* 2 自來水事業之主管機關，在中央為內政部；在省及直轄市為省（市）政府；在縣（市）（局）為縣（市）（局）政府。供水區域涉及二個以上行政區域之自來水事業，以其上一級之主管機關為主管機關。
+* 2 自來水事業之主管機關：在中央為水利主管機關；在直轄市為直轄市政府；在縣（市）為縣（市）政府。供水區域涉及二個以上行政區域之自來水事業，以其上一級之主管機關為主管機關。
 
-* 3 中央主管機關辦理左列事項：一、有關自來水事業發展、經營、管理、監督法令之訂定事項。二、有關全國性自來水事業發展計劃之訂定及監督實施事項。三、有關省（市）自來水事業之監督及輔導事項。四、有關供水區域涉及二個以上省（市）之自來水事業規劃及管理事項。五、其他有關全國性之自來水事業事項。
+> 釋：一、配合臺灣省政府功能業務與組織調整暫行修正，刪除原條文第一項省政府為主管機關之規定，並刪除「（局）」字；另酌作文字修正。二、為達水利事權一元化之社會各界共識，爰將中央主管機關調整為水利主管機關。
 
-* 4 省（市）主管機關辦理左列事項：一、有關省（市）內自來水事業法規之訂定事項。二、有關省（市）內自來水事業長期性發展計劃之訂定及實施事項。三、有關省（市）公營自來水事業之經營管理事項。四、有關省（市）內公營、民營自來水事業之監督及輔導事項。五、有關供水區域之核定事項。六、有關區域供水制度之推行事項。七、其他有關全省性之自來水事業事項。
+* 3 中央主管機關辦理左列事項：一、有關自來水事業發展、經營、管理、監督法令之訂定事項。二、有關全國性自來水事業發展計畫之訂定及監督實施事項。三、有關直轄市及縣（市）自來水事業之監督及輔導事項。四、有關供水區域涉及二個以上直轄市、縣（市）之自來水事業規劃及管理事項。五、有關供水區域之劃定事項。六、有關跨供水區域供水之輔導事項，以及停止、限制供水之執行標準與相關措施之訂定。七、其他有關全國性之自來水事業事項。
+
+> 釋：一、配合臺灣省政府功能業務與組織調整暫行條例，將縣（市）自來水事業之監督及輔導事項，明定由中央主管機關辦理，爰修正第三款。二、配合臺灣省政府功能業務與組織調整暫行條例及現況，修正第四款有關供水區域及二以上之直轄市、縣（市）之自來水事業，遇有需地方政府相互配合事項，其規劃及管理之事務，由中央主管機關辦理。三、第十三條供水區區域之劃定業務原分屬中央及省（市）主管機關，權責易生混淆，且基於全國自來水事業整體規劃考量，將有關供水區域之劃定事項由中央統籌辦理，爰增列第五款。四、原條文第四條第六款省（市）主管機關所列之「區域供水制度之推行事項」，係指為因應乾旱時基緊急供水需求或提升水資源調度利用效率，所進行之跨供水區域之水資源調配工作，宜由中央整體規劃，爰移列為本條第六款前段，並酌作修正，以資明確。五、關於水資源匱乏時，自來水供應短缺導致之限水措施，應有明確之規範制定，避免各縣市民眾權益未竟相當。前述之限水標準、階段及採行措施，應於自來水法相關子法中清楚定之，爰增列第六款後段。
+
+* 4 直轄市主管機關辦理左列事項：一、有關直轄市內自來水事業法規之訂定事項。二、有關直轄市內自來水事業計畫之訂定及實施事項。三、有關直轄市公營自來水事業之經營管理事項。四、有關直轄市內公營、民營自來水事業之監督及輔導事項。五、有關供水區域之核定事項。六、其他有關直轄市或中央主管機關指定之自來水事業事項。
+
+> 釋：一、配合臺灣省政府功能業務與組織調整，刪除省主管機關；原省主管機關辦理事項納入修正條文第三條中央主管機關辦理事項中規定。二、明定直轄市為所轄自來水事業之主管機關，並在直轄市範圍內，有自來水事務主管機關之權限，如本於行政協助立場，經中央主管機關同意，跨區對其他縣（市）供水者，例如直轄市對其他縣（市）供水情形，仍屬直轄市主管機關辦理事項。三、原條文第六款有關區域供水制度之推行事項，係指跨供水區域之供水調度，宜由中央統籌規劃，以增加供水制度之彈性，故移列第三條第六款。
 
 * 5 縣（市）（局）主管機關辦理左列事項：一、有關縣（市）（局）內自來水事業單行規章之訂定事項。二、有關縣（市）（局）內自來水事業計劃之訂定及實施事項。三、有關縣（市）（局）公營自來水事業之經營管理事項。四、有關鄉鎮公營自來水事業之監督及輔導事項。五、有關縣（市）（局）內民營自來水事業之監督及輔導事項。六、其他有關縣（市）（局）內之自來水事業事項。
 
-* 6 省（市）政府為建設管理及監督自來水事業，得專設機構。
+* 6 中央及直轄市主管機關為建設管理及監督自來水事業，得專設機構。
+
+> 釋：配合臺灣省政府功能業務與組織調整暫行條例，將省政府為建設管理及監督自來水事業得專設機構之規定，改由中央主管機關設之，並修正相關文字。
 
 * 7 自來水事業為公用事業，以公營為原則，並得准許民營。
 
@@ -16,21 +24,31 @@
 
 * 9 民營之自來水事業應依法組織股份有限公司。
 
-* 10 自來水事業所供應之自來水水質，應以清澈、無色、無臭、無味、酸鹼度適當，不含有超過容許量之化合物、微生物、礦物質、及放射性物質為準。其詳細規定。由省（市）主管機關訂定公告，並報中央主管機關核備。
+* 10 自來水事業所供應之自來水水質，應以清澈、無色、無臭、無味、酸鹼度適當，不含有超過容許量之化合物、微生物、礦物質及放射性物質為準；其水質標準，由中央主管機關會商中央環境保護及衛生主管機關定之。
 
-* 11 自來水事業對其水源之保護除依水利法之規定向水利主管機關申請辦理外，得視事實需要，申請主管機關會商有關機關，劃定公布水質、水量保護區域，禁止在該區域內一切貽害水質與水量之行為。
+> 釋：現行「臺灣省自來水水質標準」係依本條「其詳細規定，由省（市）主管機關訂定公告」之規定訂定，並無明確之授權依據，因其規定內容涉及人民權利義務，依行政程序法之規定，其訂定應有法律之依據，爰增列訂定上開標準之授權依據，並配合省自來水業務已調移中央，明定由中央主管機關會商定之。
+
+* 11 自來水事業對其水源之保護，除依水利法之規定向水利主管機關申請辦理外，得視事實需要，申請主管機關會商有關機關，劃定公布水質水量保護區，依本法或相關法律規定，禁止或限制左列貽害水質與水量之行為：一、濫伐林木或濫墾土地。二、變更河道足以影響水之自淨能力。三、土石採取或探礦、採礦致污染水源。四、排放超過規定標準之工礦廢水或家庭污水，或其總量超過目的事業主管機關所訂之標準。五、污染性工廠。六、設置垃圾掩埋場或焚化爐、傾倒、施放或棄置垃圾、灰渣、土石、污泥、糞尿、廢油、廢化學品、動物屍骸或其他足以污染水源水質物品。七、在環境保護主管機關指定公告之重要取水口以上集水區養豬；其他以營利為目的，飼養家禽、家畜。八、以營利為目的之飼養家畜、家禽。九、高爾夫球場之興建或擴建。十、核能或其他能源之開發、放射性廢棄物儲存或處理場所之興建。十一、其他足以貽害水質、水量，經中央主管機關會商目的事業主管機關公告之行為。前項各款之行為，為居民生活或地方公共建設所必要，且經主管機關核准者，不在此限。
+
+> 釋：一、配合行政程序法之施行，將現行「自來水臺灣省施行細則」第九條有關在水質水量保護區內之禁止或限制行為規定，提昇至法律位階。二、第一項序文酌作文字修正，另增列十一款規定。三、增列第二項。
 
 * 12 前條水質水量保護區域內，原有建築物及土地使用，經主管機關會商有關機關認為有貽害水質水量者，得通知所有權人或使用人於一定期間內拆除、改善或改變使用。其所受之損失，由自來水事業補償之。前項補償金額，如雙方不能達成協議時，由主管機關核定之。
 
-* 12.1 水質水量保護區依都市計畫程序劃定為水源特定區者，其土地應視限制程度減免土地增值稅、贈與稅及遺產稅。前項土地減免賦稅區域及標準，由財政部會同內政部擬訂，報請行政院核定。自來水事業應於水價外附徵一定比例之費用，協助第一項土地受限地區地方建設。前項之一定比例及協助地方建設辦法，由主管機管會商有關機關定之。
+* 12.1 水質水量保護區依都市計畫程序劃定為水源特定區者，其土地應視限制程度減免土地增值稅、贈與稅及遺產稅。前項土地減免賦稅區域及標準，由財政部會同內政部及中央主管機關擬訂，報請行政院核定。自來水事業應於水價外附徵一定比例之費用，協助第一項土地受限地區地方建設或權益受限人。前項之一定比例及協助地方建設或權益受限人之辦法，由主管機關會商有關機關定之。
 
-> 釋：台灣地區水源區民眾因遭劃入水質水量保護區後政府無法予以徵收土地而土地使用有諸多限制，有礙建設繁榮並使生計萎縮，飲水思源，理應協助其地方建設並補貼其禁建、禁墾、禁伐所造成權益受損生計困頓之苦。而水源區之造林保林工作更為保護水源、淨化水質治本之道。
+> 釋：一、依「臺灣省政府功能業務與組織調整暫行條例」第四條第四項規定，行政院業將省政府所屬機關主管水資源業務指定經濟部統籌承辦。第二項爰增列中央主管機關亦為會同擬訂土地減免賦稅區域及標準之權責機關之一。二、第三項末句後之「地方建設」字下，增列「或權益受限人」等字。三、第四項首句末之「地方建設」字下，增列「或權益受限人」等字。
 
-* 13 中央或省（市）主管機關得視自來水之水源分佈、工程建設與社會經濟情形，劃定區域，實施區域供水。前項經劃定之區域，中央或省（市）主管機關得因事實需要修正或變更之。
+* 13 中央主管機關得視自來水之水源分佈、工程建設及社會經濟情形，劃定區域，實施區域供水。前項經劃定之區域，中央主管機關得因事實需要修正或變更之。
 
-* 14 在劃定之供水區域內，中央或省（市）主管機關得輔導二個以上自來水事業協議合併經營；如不能獲得協議時，並得以命令行之。
+> 釋：配合臺灣省政府功能業務與組織調整及本法第三條之修正，將劃定供水區域之權責，修正由中央主管機關辦理。
 
-* 15 省主管機關為發展全省自來水事業，得向自來水事業依照出水量及營業情況，徵借發展自來水循環基金。前項基金之徵借、運用及償還辦法，由省主管機關擬訂，連同長期發展計劃呈報中央主管機關核定後實施。
+* 14 在劃定之供水區域內，中央主管機關得輔導二個以上自來水事業協議合併經營；如不能獲得協議時，並得以命令行之。
+
+> 釋：配合臺灣省政府功能業務與組織調整，將省（市）主管機關得輔導二個以上自來水事業協議合併經營之規定，因屬二直轄市或縣（市）以上事項，修正明定由中央主管機關辦理。
+
+* 15 （刪除）
+
+> 釋：一、本條刪除。二、因自來水循環基金均未成立，亦無向自來水事業借貸之情形，且臺灣省政府功能業務與組織調整後，本條文之規範內容亦無存在之必要，爰刪除本條。
 
 * 16 本法所稱自來水，係指以水管及其他設施導引供應合於衛生之公共給水。
 
@@ -50,41 +68,63 @@
 
 * 24 興辦自來水事業者，應依水利法之規定，向水利主管機關申請水權登記，暨與水權、水源有關之水利建造物之建造、改造或拆除之核准。前項申請，應由自來水事業主管機關核轉之。
 
-* 25 與辦自來水事業者，應於取得水權後一年內，填具申請書，連同工程計劃及經營計劃，申請縣（市）（局）主管機關，轉報省主管機關核准其自來水事業專營權，發給自來水事業專營權證後，始得開工興建自來水工程，其在直轄市者，向直轄市主管機關申請辦理之。省（市）主管機關為前項自來水事業專營權之核准，應報請中央主管機關核備。在同一地區內，同時有二個以上之民營自來水事業興辦人，申請自來水事業專營權時，省（市）主管機關得通知各該民營自來水事業興辦人，於一定期間內自行協議，協議不成時，由省（市）主管機關核定之。該同一地區涉及二個以上行政區域時，由其上一級主管機關核辦之。第一項工程計劃及經營計劃應載明之事項，由省（市）主管機關訂定之。
+* 25 興辦自來水事業者，應於取得水權後一年內，填具申請書，連同工程計畫及經營計畫，申請縣（市）主管機關，轉報中央主管機關核准其自來水事業專營權，發給自來水事業專營權證後，始得開工興建自來水工程；其在直轄市者，向直轄市主管機關申請辦理之。直轄市主管機關為前項自來水事業專營權之核准，應報請中央主管機關核備。在同一地區內，同時有二個以上之民營自來水事業興辦人，申請自來水事業專營權時，中央或直轄市主管機關得通知各該民營自來水事業興辦人，於一定期間內自行協議，協議不成時，由中央或直轄市主管機關核定之。第一項工程計畫及經營計畫應載明之事項，分別由中央、直轄市主管機關定之。
 
-* 26 省（市）主管機關駁回自來水事業專營權之申請時，應同時通知水利主管機關撤銷其水權。
+> 釋：一、配合臺灣省政府功能業務與組織調整，將第一項省主管機關核准自來水事業專營權之規定，修正改由中央主管機關為之；另刪除「（局）」主管機關之規定，以符現行行政體制。二、配合前項修正，第二項前段主管機關核准自來水事業專營權時，應報請中央主管機關核備之規定；並將省主管機關通知同一地區二個以上自來水事業專營權之自行協議、協議不成時之核定規定，修正改由中央主管機關為之。三、第三項省主管機關訂定工程計畫及經營計畫應明事項之規定，修正改由中央主管機關為之。
 
-* 27 自來水事業專營權證應載明左列事項：一、自來水事業之名稱及所在地。二、自來水事業負責人。三、水權證字號。四、供水區域。五、主要供水設備。六、資本總額。七、其他應行記載事項。前項各款記載之內容，非經省（市）主管機關核准不得變更，變更時應換發自來水事業專營權證。
+* 26 中央或直轄市主管機關駁回自來水事業專營權之申請時，應同時通知水利主管機關撤銷其水權。
+
+> 釋：配合臺灣省政府功能業務與組織調整，將省（市）主管機關駁回自來水事業專營權申請之規定，修正改由中央主管機關辦理。
+
+* 27 自來水事業專營權證應載明左列事項：一、自來水事業之名稱及所在地。二、自來水事業負責人。三、水權證字號。四、供水區域。五、主要供水設備。六、資本總額。七、其他應行記載事項。前項各款記載之內容，非經中央或直轄市主管機關核准不得變更，變更時應換發自來水事業專營權證。
+
+> 釋：配合臺灣省政府功能業務與組織調整，將第二項省主管機關核准自來水事業專營權證變更記載內容之規定，修正改由中央或直轄市主管機關辦理。
 
 * 28 自來水事業專營權之有效期間為三十年。
 
 * 29 中央主管機關為劃一自來水事業專營權之申請、核准及撤銷，得訂定自來水事業專營權管理規則。
 
-* 30 興辦自來水事業者，於領得自來水事業專營權證後，對於第二十五條第一項工程計劃及經營計劃之實施，遇有左列情形之一時，除有正當理由申請省（市）主管機關核准延期者外，由縣（市）（局）主管機關報請省主管機關撤銷其自來水事業專營權；其在直轄市者，由直轄市主管機關為之：一、核定之工程開始日期起，經過三個月尚未開工者。二、核定之工程完成日期起，經過一年尚未完工者。三、核定之開始供水日期起，經過三個月尚未供水者。
+* 30 興辦自來水事業者，於領得自來水事業專營權證後，對於第二十五條第一項工程計畫及經營計畫之實施，遇有左列情形之一時，除有正當理由申請中央或直轄市主管機關核准延期者外，由縣（市）主管機關報請中央主管機關撤銷其自來水事業專營權；其在直轄市者，由直轄市主管機關為之：一、核定之工程開始日期起，經過三個月尚未開工者。二、核定之工程完成日期起，經過一年尚未完工者。三、核定之開始供水日期起，經過三個月尚未供水者。
 
-* 31 興辦自來水事業者，於工程設施完成後，應報請省（市）主管機關查驗合格，發給自來水事業執照始得營業。依水利法之規定，須向水利主管機關申請核准之有關水權、水源之水利建造物，由自來水主管機關核轉水利主管機關查驗之。
+> 釋：配合臺灣省政府功能業務與組織調整，將序文規定省主管機關核准延期興建辦自來水事業之工程計畫及經營計畫實施之規定，修正改由中央主管機關為之；並將省主管機關撤銷自來水事業專營權之規定，修正改由中央主管機關為之；並配合現行行政體制，刪除「（局）」主管機關之規定，及酌作文字修正。
 
-* 32 自來水事業於開始營業後，非經省（市）主管機關核准不得歇業；其經核准歇業者，應於核准後三十日內，將其自來水事業營業執照呈繳省（市）主管機關註銷。
+* 31 興辦自來水事業者，於工程設施完成後，應報請中央主管機關查驗合格，發給自來水事業執照始得營業；其向直轄市主管機關申請興辦自來水事業者，應報請直轄市主管機關查驗合格，發給自來水事業執照始得營業。依水利法之規定，須向水利主管機關申請核准之有關水權、水源之水利建造物，由水利主管機關查驗之。
+
+> 釋：一、配合臺灣省政府功能業務與組織調整，將第一項省（市）主管機關查驗合格發給自來水事業執照之規定，修正改由中央主管機關辦理；辦理查驗工程驗證事項修正為由「中央主管機關」辦理。二、由於本法主管機關已改為經濟部，原條文第二項有關「自來水主管機關核轉水利主機關」之規定，屬經濟部內部之核轉作業，無須於法中訂定，爰作文字修正。
+
+* 32 自來水事業於開始營業後，非經中央或直轄市主管機關核准不得歇業；其經核准歇業者，應於核准後三十日內，將其自來水事業營業執照呈繳中央或直轄市主管機關註銷。
+
+> 釋：配合臺灣省政府功能業務與組織調整將省主管機關核准自來水事業歇業之規定，修正改由中央或直轄市主管機關為之。
 
 * 33 自來水事業之輸送幹管線路，經主管機關核准後，得通過其他自來水事業之供水區域。
 
 * 34 自來水事業除有左列情形之一者外，不得供水於其供水區域以外之地區：一、經主管機關核准供水與另一自來水事業者。二、經主管機關特別指定供水與國防事業者。三、無自來水地方居民申請供水，經主管機關核准供水者。四、因災變或其他緊急事故，鄰近自來水事業停止供水，一時不及修復，必須緊急暫時供水者。
 
-* 35 自來水事業之移轉，應經省（市）主管機關核准，並換發自來水事業專營權證。
+* 35 自來水事業之移轉，應經中央或直轄市主管機關核准，並換發自來水事業專營權證。
+
+> 釋：配合臺灣省政府功能業務與組織調整，將省主管機關核准自來水事業移轉之規定，修正改由中央主管機關為之。
 
 * 36 自來水事業專營權，除移轉外，不得為設定權利之標的。
 
-* 37 本法公布施行前原有之自來水事業，應於本法公布後六個月內，依本法之規定向省（市）主管機關申請核發自來水事業專營權證，其有效期間為二十年。省（市）主管機關核發前項自來水事業專營權證時，應同時發給自來水事業營業執照。
+* 37 （刪除）
 
-* 38 自來水事業專營權有效期間屆滿，公營自來水事業，應於有效期間屆滿之一年前，為繼續經營之申請。民營自來水事業，省（市）或縣（市）（局）主管機關得予收歸公營，但應於有效期間屆滿之二年前通知之。主管機關對於決定收歸公營之民營自來水事業，得於其專營權有效期間屆滿後，定期先行接管，同時依第四十條之規定協議或評定收購價格。省（市）或縣（市）（局）主管機關未為前項收歸公營之通知，而原自來水事業申請繼續經營時，應核准其繼續經營。繼續經營自來水事業，其專營權有效期間以十年為一期。
+> 釋：一、本條刪除。二、本條適用期間業已屆期，已無明定必要，爰予刪除。
 
-* 39 民營自來水事業於專營權有效期間屆滿後無意繼續經營者，應於有效期間屆滿之二年前申報縣（市）（局）主管機關轉報省主管機關；其在直轄市者，申報直轄市主管機關。省（市）主管機關收受前項申報後，應即籌劃收歸公營或公告招商承受經營，並報中央主管機關核備。
+* 38 自來水事業專營權有效期間屆滿，公營自來水事業，應於有效期間屆滿之一年前，為繼續經營之申請；民營自來水事業，主管機關得予收歸公營。但應於有效期間屆滿之二年前通知之。主管機關對於決定收歸公營之民營自來水事業，得於其專營權有效期間屆滿後，定期先行接管，同時依第四十條之規定協議或評定收購價格。主管機關未為前項收歸公營之通知，而原自來水事業申請繼續經營時，應核准其繼續經營。繼續經營自來水事業，其專營權有效期間以十年為一期。
+
+> 釋：配合臺灣省政府功能業務及組織調整暫行條例，將第一項及第三項省主管機關得將民營自來水事業收歸公營之規定，修正改由中央主管機關為之；並配合現行行政體制，刪除「（局）」主管機關之規定，將「省（市）或縣（市）（局）主管機關」修正為「主管機關」。
+
+* 39 民營自來水事業於專營權有效期間屆滿後無意繼續經營者，應於有效期間屆滿之二年前申報縣（市）主管機關轉報中央主管機關；其在直轄市者，申報直轄市主管機關。中央或直轄市主管機關收受前項申報後，應即籌劃收歸公營或公告招商承受經營；其由直轄市主管機關辦理者，並報中央主管機關核備。
+
+> 釋：一、第一項配合現行行政體制，刪除「（局）」主管機關之規定；另為配合臺灣省政府功能業務及組織調整，將省主管機關接受縣（市）主管機關轉報民營自來水事業無意經營之規定，改由中央主管機關為之。二、第二項之省主管機關配合第一項修正為中央主管機關；其由直轄市主管機關辦理者，應報中央主管機關核備。
 
 * 40 民營自來水事業收歸公營時，其收購價格如雙方不能獲得協議，由政府及民營自來水事業各聘專家二人，再由雙方所聘之專家推定另一專家，組織評價委員會，依照左列方法，評定其價格：一、依據該自來水事業現有全部資產核實估價。二、依據該自來水事業創立之投資，及營業期內增置設備，擴充改良，一切資產價額，減去廢棄設備價額、折舊準備及其提存之各種準備金暨用戶公積金之餘額。前項另一專家人選之推定，不能獲致協議時，雙方所聘之專家應各提二人以上相等人數之專家名單，由政府及民營自來水事業共同申請所在地法院選定之。
 
 * 41 自來水事業管有之不動產及自來水設備，非經呈報省（市）主管機關核准，不得處分或設定負擔。違反前項規定者，其處分或設定負擔無效。
 
-* 42 自來水事業之工程設施標準，由省（市）主管機關訂定之。依水利法之規定，須向水利主管機關申請核准之有關水權、水源之水利建造物，其工程設施標準，應由自來水主管機關核轉水利主管機關核定之。
+* 42 自來水事業之工程設施標準，分別由中央及直轄市主管機關訂定之。依水利法之規定，須向水利主管機關申請核准之有關水權、水源之水利建造物，其工程設施標準，由水利主管機關核定之。
+
+> 釋：一、配合臺灣省政府功能業務及組織調整暫行條例，將第一項省主管機關訂定自來水工程設施標準之規定，修正改為分別由中央及直轄市主管機關為之。二、由於本法主管機關已改為經濟部，原條文第二項有關「自來水主管機關核轉水利主管機關」之規定，屬經濟部內部之核轉作業，無須於法中訂定，爰作文字修正。
 
 * 43 自來水事業應具有左列必要之設備：一、取水設備、應具備集取必需原水水量之能力。二、貯水設備、應具備必要之貯水能力，俾枯水季節，原水無缺。三、導水設備、應設置適當之抽水機、導水管及其他設備，以導送必需之原水。四、淨水設備、應設置適當之沉澱池、過濾池、消毒、水質控制及其他淨水設備。五、送水設備、應設置適當之抽水機、送水管及其他設備，以輸送必需之清水。六、配水設備、應設置適當之配水池、抽水機、配水管及其他配水設備。
 
@@ -92,13 +132,17 @@
 
 * 45 自來水事業對於水質之控制，各種自來水設備之操作及供水之水量、水壓等，均應逐日紀錄，以備查考。
 
-* 46 自來水事業應配合公共消防設置救火栓，其設置標準由省（市）主管機關訂定之。前項設置救火栓所增加之各種費用，由所在地地方政府鄉、鎮（市）公所酌予補助。
+* 46 自來水事業應配合公共消防設置救火栓。其設置標準，分別由中央及直轄市主管機關會商消防主管機關定之。前項設置救火栓所增加之各種費用，由所在地地方政府、鄉鎮（市）公所酌予補助。
+
+> 釋：配合臺灣省政府功能業務及組織調整，將第一項省主管機關訂定救火栓設置標準之規定，修正改由中央及直轄市主管機關會商消防主管機關定之。
 
 * 47 自來水系統之送水及配水管線，不得與其他管線相連接。
 
 * 48 自來水事業為預防供水發生故障，應有適當之備用供水能力，並應採取種種適當措施，儘量減少斷水之可能性與時間。
 
-* 49 自來水事業對各項設備應定期檢驗並記錄檢驗結果。其檢驗辦法，由省（市）主管機關訂定之。
+* 49 自來水事業對各項設備應定期檢驗並記錄檢驗結果。其檢驗辦法，分別由中央及直轄市主管機關訂定之。
+
+> 釋：配合臺灣省政府功能業務及組織調整，將省主管機關訂定自來水設備檢驗辦法之規定，修正改為分別由中央及直轄市主管機關為之。
 
 * 50 自來水用戶用水設備，應依用水設備標準裝設，並經自來水事業或由自來水事業委託相關專業團體代為施檢合格，始得供水。前項用水設備標準，由中央主管機關定之。
 
@@ -112,17 +156,25 @@
 
 * 54 自來水事業依第五十一條、第五十二條之規定，埋設於都市計劃區域內公有道路及其預定地之水管或其他設備，因都市計劃之變更，必須遷移或拆除者，自來水事業得請求補償。其補償金額由雙方協議決定，協議不成，由主管機關核定之。
 
-* 55 自來水事業發覺其所供給之水，有礙衛生時，應將使用該水之危險，登載當地報紙，或以其他方法予以公告，並普遍通知關係人，同時應立即改善；如情形嚴重妨害人體健康時，應即報請直轄市或縣（市）（局）主管機關核准停止供水。凡發覺自來水有礙衛生或妨害人體健康者，應迅即通知該自來水事業予以處理。
+* 55 自來水事業發覺其所供給之水，有礙衛生時，應將使用該水之危險，登載當地報紙，或以其他方法予以公告，並普遍通知關係人，同時應立即改善；如情形嚴重妨害人體健康時，應即報請直轄市或縣（市）主管機關核准停止供水。凡發覺自來水有礙衛生或妨害人體健康者，應迅即通知該自來水事業予以處理。
+
+> 釋：因第二條主管機關已配合臺灣省政府功能業務及組織調整暫行條例修正，爰配合刪除第一項「（局）」主管機關。
 
 * 56 自來水事業工程之設計，以登記合格之工程技師為限。
 
 * 57 自來水事業所聘僱之總工程師、工程師，均以登記合格之工程技師為限。其他施工、管理、化驗、操作等人員，應具有專科之技術，並經考驗合格。前項考驗辦法由中央主管機關訂定之。
 
-* 58 自來水事業應訂定營業章程，呈經省（市）主管機關核准後公告實施，修改時亦同。供水條件及自來水事業與用戶雙方應遵守事項，須於前項營業章程內訂明。
+* 58 自來水事業應訂定營業章程，報經主管機關核准後公告實施，修改時亦同。供水條件及自來水事業與用戶雙方應遵守事項，須於前項營業章程內訂明。
 
-* 59 自來水水價之訂定，應以水費收入抵償其所需成本，並獲得合理之利潤。其計算公式及詳細項目，由省（市）主管機關擬定，報請中央主管機關核定之。前項合理利潤，應以投資之公平價值，並參酌當地通行利率，利潤訂定。
+> 釋：配合臺灣省政府功能業務及組織調整，將第一項省（市）主管機關核准自來水事業營業章程之規定，修正向各該主管機關為之。
 
-* 60 自來水事業依前條規定擬定水價詳細項目或調整水費，應申請省（市）主管機關核定之；並呈報中央主管機關備查。
+* 59 自來水水價之訂定，應考量自來水供應品質，以水費收入抵償其所需成本，並獲得合理之利潤。其計算公式及詳細項目，由主管機關訂定；其由直轄市或縣（市）主管機關訂定者，應報請中央主管機關核定之。前項合理利潤，應以投資之公平價值，並參酌當地通行利率、利潤訂定。
+
+> 釋：一、自來水之水價制訂除衡量其成本，亦應以質計價，保障國民用水權益。二、配合臺灣省政府功能業務及組織調整暫行條例，將省主管機關擬定水價計算公式及詳細項目，修正為由中央主管機關訂定；其由直轄市或縣（市）主管機關訂定者，應報請中央主管機關核定。
+
+* 60 自來水事業依前條規定擬定水價詳細項目或調整水費，應申請主管機關核定之；其由直轄市或縣（市）主管機關核定者，應報中央主管機關備查。
+
+> 釋：配合臺灣省政府功能業務及組織調整暫行條例，將省主管機關核定水價詳細項目或調整水費之規定，修正為中央主管機關核定；其由直轄市或縣（市）主管機關核定者，應報請中央主管機關備查。
 
 * 61 自來水事業在其供水區域內，對於請求供水者，非有正當理由，不得拒絕。前項請求供水者，對拒絕供水如有異議，得申請主管機關核定之。
 
@@ -164,7 +216,9 @@
 
 * 80 未依本法之規定申請核准，擅自興建自來水工程或經營自來水事業者，主管機關應勒令其停止或停業。
 
-* 81 自來水事業各級負責人及依第五十七條應具備特定資格之人員，應於就任或解任日起十五日內層報省（市）主管機關備查。
+* 81 自來水事業各級負責人及依第五十七條應具備特定資格之人員，應於就任或解任日起十五日內層報主管機關備查。
+
+> 釋：配合臺灣省政府功能業務及組織調整，將省主管機關備查自來水事業負責人及特定資格人員之規定，修正改由中央主管機關為之。
 
 * 82 自來水事業辦理不善時，主管機關得限期令其改善；逾期不改善者，得擬具監理計劃報請上級主管機關核准後監督其業務，並予整頓，繼續供水。前項監理之自來水事業，在整頓完善後停止其監理。
 
@@ -189,6 +243,30 @@
 * 92 主管機關發現有違反第四十七條所規定之情事，得勒令改正或強制拆除。
 
 * 93 自來水管承裝商應向所在地直轄市或縣（市）政府登記始得營業。自來水管承裝商之技工，應經考驗及格給予證書始得工作。自來水管承裝商登記規則及其技工考驗辦法，由中央主管機關訂定之。
+
+* 93.1 自來水管承裝商登記證應懸掛於營業處所明顯易見之處，所領承辦工程手冊專供工程單位驗證之需。自來水管承裝商承辦工程所用之材料，其規格應符合規定。自來水管承裝商違反前二項規定者，原登記直轄市或縣（市）政府應予警告處分。
+
+> 釋：一、本條新增。二、配合行政程序法之施行，將現行「自來水管承裝商登記規則」第九條、第十八條及第二十五條第一項有關對自來水管承裝商之警告處分規定，提昇至法律位階。
+
+* 93.2 自來水管承裝商有左列情事之一者，原登記直轄市或縣（市）政府應予六個月以上二年以下停業處分：一、違反前條規定，一年內受警告處分三次以上者。二、違反承裝商分類資格規定承辦工程或未依分類資格規定聘雇專任技術員或技工者。三、未依第九十三條之六所定管理辦法之規定，辦理申請變更事項者。四、施工或經營管理事項，違反第九十三條之六所定管理辦法有關施工計畫之規定，情節重大者。
+
+> 釋：一、本條新增。二、配合行政程序法之施行，將現行「自來水管承裝商登記規則」第四條、第十一條、第十九條、第二十條、第二十五條第二項、第二十六條第二項有關對自來水管承裝商之停業規定，提昇至法律位階。
+
+* 93.3 自來水管承裝商有左列情事之一者，直轄市或縣（市）主管機關應廢止其營業許可：一、喪失營業能力或停業超過二年，未依限申請復業者。二、受停業處分，未在規定期限內將許可證書、承辦工程手冊或技術員工工作證繳還，經限期催繳，屆期仍不繳還者。三、二年內受停業處分二次以上及受停業處分累積達三年者。四、出售或轉借營業許可證書或頂替使用者。五、有圍標情事者。經依前項規定廢止許可者，三年內不得再行依第九十三條第一項規定申請許可。
+
+> 釋：一、本條新增。二、配合行政程序法之施行，將現行「自來水管承裝商登記規則」第二十七條、第三十二條有關對自來水管承裝商之廢止營業許可規定，提昇至法律位階。
+
+* 93.4 自來水管承裝技術員工於施工時，未隨身攜帶工作證者，原登記直轄市或縣（市）政府應予警告處分。
+
+> 釋：一、本條新增。二、配合行政程序法之施行，將現行「自來水管承裝商登記規則」第二十一條、第二十二條及第二十八條第一項有關對自來水管承裝技工之警告處分，規定提昇至法律位階。
+
+* 93.5 自來水管承裝技術員工，經受警告處分三次以上、將工作證塗改或交付他人使用者，原登記直轄市或縣（市）政府應予停止工作二個月以上六個月以下之處分。自來水管承裝技術員工受停止工作處分二次以上者，主管機關應廢止其工作證，並於一年內不得受自來水管承裝商僱用。
+
+> 釋：一、本條新增。二、配合行政程序法之施行，將現行「自來水管承裝商登記規則」第二十八條第一項、第二十九條第一項及第三十三條有關對自來水管承裝技工之停止工作等規定，提昇至法律位階。
+
+* 93.6 自來水管承裝商許可之資格、條件、申請程序及其分類、施工計畫與所屬技術員工之聘用、資格及其他應遵行事項，其管理辦法，由中央主管機關定之。
+
+> 釋：一、本條新增。二、現行「自來水管承裝商登記規則」規定內容涉及人民權利義務，依行政程序法之規定，其訂定應有法律之依據，爰增列訂定上開標準之授權依據。
 
 * 94 自來水事業因不可抗力遭受重大損害時，為求迅速恢復供水，得向中央或地方政府請求撥借材料或貸款。
 
@@ -216,17 +294,25 @@
 
 * 106 自來水事業有左列情形之一者，處五百元以下罰鍰：一、違反第二十七條第二項規定者。二、不依第五十七條第一項之規定，聘僱人員者。三、違反第六十一條第一項之規定，拒絕供水者。四、不依第八十一條之規定，申報備查者。五、違反第八十六條之規定，拒絕檢查者。六、不依第八十七條之規定申報者。七、違反第八十八條之規定，擅自辦理者。設置自用自來水設備之人，違反第七十三條至第七十五條之規定者，依前項規定處罰。
 
-* 107 自來水管承裝商違反第九十三條第一項規定者，除由主管機關勒令停止營業或吊銷執照外，處五百元以下罰鍰。
+* 107 違反第九十三條第一項規定承辦自來水管承裝工程者，或自來水管承裝商經依第九十三條之三之規定，廢止其營業許可者，除由主管機關勒令停業外，處五百元以下罰鍰。自來水管承裝商經依第九十三條之二第二款之規定，處以停業處分者，並處三百元以下罰鍰。
 
-* 108 承裝自來水管之技工違反第九十三條第一項規定者，除由主管機關禁止其從事承裝自來水管工作外，處一百元以下罰鍰。
+> 釋：一、為落實管理並配合第九十三條之三之增訂，爰修正第一項並酌修其文字。二、配合第九十三條之二之增訂，爰增訂第二項。
+
+* 108 不具承裝自來水管技術員工之資格，受僱自來水承裝商或經依第九十三條之五第二項之規定廢止其工作證者，除禁止其從事承裝自來水管工作外，處一百元以下罰鍰。
+
+> 釋：配合第九十三條之五之增訂，增列其罰則，並為明確第九十三條第一項之行為，酌作文字修正。
 
 * 109 依本法規定所處之罰鍰，如有抗不繳納者，移送法院強制執行之。
 
-* 110 每日供水量在三百立方公尺以下之簡易自來水事業，得不適用本法第十條、第四十三條至第四十六條、第四十八條、第四十九條、第五十七條、第六十三條各條之規定，由省（市）主管機關視地方情形，另行訂定辦法，報請中央主管機關核備。
+* 110 每日供水量在三百立方公尺以下之簡易自來水事業，得不適用第十條、第四十三條至第四十六條、第四十八條、第四十九條、第五十七條、第六十三條之規定，由直轄市或縣（市）主管機關另行訂定辦法，報請中央主管機關備查。
+
+> 釋：配合臺灣省政府功能業務及組織調整，將省（市）主管機關視地方情形訂定簡易自來水事業辦法之規定，修正改由直轄市或縣（市）主管機關訂定，並報請中央主管機關備查。
 
 * 111 本法施行前已經營之自來水事業，與本法之規定不符者，應於本法施行後一年內依本法之規定辦理之。
 
-* 112 本法施行細則，由各省（市）政府分別擬定，報請中央主管機關核定之。
+* 112 本法施行細則，由中央主管機關定之。
+
+> 釋：配合臺灣省政府功能業務及組織調整，且考量全國水資源統籌管理之必要性，修正改由中央主管機關訂定施行細則。
 
 * 113 本法自公布日施行。
 
